syntax = "proto3";

option go_package = "finnbank/common/grpc/statement";

service StatementService {
    rpc GenerateStatement (ClientRequest) returns (ClientResponse) {}
}

message ClientRequest {
    int32 creditId = 1;
    int32 debitId = 2;
    int32 savingsId = 3;
    string start_date = 4;
    string end_date = 5;
}

message ClientResponse {
    bytes pdf_buffer = 1;
}